Configure project as a reusable Spring Boot Starter library